# mcp-serper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_serper.py  pyproject.toml  requirements.txt  server.py  setup.sh
demo/: index.html  nginx.conf
