[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-serper"
version = "0.1.0"
description = "Herramienta para buscar documentación técnica usando Google Serper API a través del protocolo MCP con soporte SSE"
readme = "README.md"
authors = [{ name = "HenrryVale", email = "henrryvalenzuelaperez@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "redis>=5.0.1",
    "uvicorn>=0.25.0",
    "starlette>=0.33.0",
    "pydantic>=2.5.2",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
]

[project.urls]
Homepage = "https://github.com/HenrryVale/mcp-serper"
Issues = "https://github.com/HenrryVale/mcp-serper/issues"

[tool.setuptools]
packages = ["mcp_serper"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"